[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "itocore"
version = "0.1.0"
description = "High-performance quantitative finance library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10"
]

[tool.scikit-build]
wheel.packages = ["src/itocore"]
cmake.source-dir = "."